fix failed test cases
Signed-off-by: Jude Niroshan <jude.niroshan11@gmail.com>